First attempt at redesign... only postings done.

--- a/app/views/postings/_list.html.erb
+++ b/app/views/postings/_list.html.erb
@@ -1,4 +1,4 @@
-<div class="posting_list">
+<div class="item_list">
 <% postings.each do |posting| %>
   <%= raw(posting_div(posting)) %>
 <% end %>
