--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -1,8 +1,11 @@
-<% if action_name == 'requests' %>
-  <%= link_to 'I Want', new_posting_path(:have => 0), :rel => 'facebox', :class => 'button' %>
-<% else %>
-  <%= link_to 'I Have', new_posting_path(:have => 1), :rel => 'facebox', :class => 'button' %>
+<div class="buttonset">
+<% unless action_name == 'requests' %>
+  <%= link_to 'I Have', new_posting_path(:have => 1), :rel => 'facebox' %>
 <% end %>
+<% unless action_name == 'inventory' %>
+  <%= link_to 'I Want', new_posting_path(:have => 0), :rel => 'facebox' %>
+<% end %>
+</div>
 
 <div id="search">
   <%= form_tag request.path, :method => :get do %>
@@ -10,8 +13,6 @@
   <% end %>
 </div>
 
-<div id="<%= action_name == 'requests' ? 'want' : 'have' %>">
-  <%= will_paginate @postings %>
-  <%= render :partial => 'postings/list', :object => @postings, :as => :postings %>
-  <%= will_paginate @postings %>
-</div>
+<%= will_paginate @postings %>
+<%= render :partial => 'postings/list', :object => @postings, :as => :postings %>
+<%= will_paginate @postings %>
