--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.text_area :description, :placeholder => 'e.g. one ring to rule them all...' %>
   </div>
   <div class="field">
+    <%= f.label :category %>
+    <%= f.select :category, Posting.categories %>
+  </div>
+  <div class="field">
     <%= f.label :photo %><br/>
     <%= f.file_field :photo %>
   </div>
