--- a/app/views/postings/_list.html.erb
+++ b/app/views/postings/_list.html.erb
@@ -1,7 +1,11 @@
-<%= will_paginate postings %>
-<div id="posting_list">
-  <% postings.each do |posting| %>
-    <%= raw(posting_div(posting)) %>
-  <% end %>
-</div>
-<%= will_paginate postings %>
+<% if postings.empty? %>
+  No results found. <%= link_to 'Display All', :action => action_name %>.
+<% else %>
+  <%= will_paginate postings %>
+  <div id="posting_list">
+    <% postings.each do |posting| %>
+      <%= raw(posting_div(posting)) %>
+    <% end %>
+  </div>
+  <%= will_paginate postings %>
+<% end %>
