--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_area :description, :placeholder => 'e.g. one ring to rule them all...' %>
   </div>
   <div class="field">
-    <%= f.label :category %>
+    <%= f.label :category %><br/>
     <%= f.select :category, Posting.categories %>
   </div>
   <div class="field">
