Added distinction between borrowing and selling

--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -2,18 +2,23 @@
 
 <%= form_for @posting, :html => { :multipart => true }, :remote => true do |f| %>
   <%= f.error_messages  %>
-  <div class="field">
-    <%= f.label :description, (params[:have] == '1' ? 'I have' : 'I want') %><br/>
-    <%= f.text_area :description, :placeholder => 'e.g. one ring to rule them all...' %>
-  </div>
+  
   <div class="field">
     <%= f.label :category %><br/>
     <%= f.select :category, Posting.categories %>
   </div>
+  
   <div class="field">
-    <%= f.label :photo %><br/>
-    <%= f.file_field :photo %>
+    <%= f.label :description, (params[:have] == '1' ? 'I have' : 'I want') %><br/>
+    <%= f.text_area :description, :placeholder => 'e.g. one ring to rule them all...' %>
   </div>
+  
+  <div class="field">
+    <%= f.label :for_sale, 'To' %><br/>
+    <%= f.radio_button :for_sale, false %><%= params[:have] == '1' ? 'Lend' : 'Borrow' %>
+    <%= f.radio_button :for_sale, true %><%= params[:have] == '1' ? 'Sell' : 'Buy' %>
+  </div>
+  
   <div class="field">
     <%= f.label :price %><br/>
     <%= f.radio_button :free, true %>Free<%= f.radio_button :free, false %>Pay
@@ -21,6 +26,12 @@
       $<%= f.text_field :price %>
     </div>
   </div>
+  
+  <div class="field">
+    <%= f.label :photo %><br/>
+    <%= f.file_field :photo %>
+  </div>
+  
   <%= f.label 'Post on' %>
   <% current_user.accepted_communities.each do |community| %>
     <div class ="field">
@@ -31,8 +42,10 @@
       <%= community.name %>
     </div>
   <% end %>
+  
   <%= f.hidden_field :have, :value => (@posting.have.nil? ? params[:have] : @posting.have) %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
+  
   <div class="actions">
     <%= f.submit 'Post', :class => 'button' %>
   </div>
