--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -81,7 +81,7 @@ div.field, div.actions { margin-bottom: 10px; }
 #header_content img {
   width: 449px;
   height: 85px;
-  margin-top: 15px;
+  margin: 16px 0 0 -7px;
 }
 
 #header_content a:hover {
@@ -90,20 +90,28 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #nav {
   width: 100%;
-  height: 50px;
-  background-color: #404040;
+  height: 40px;
+  background-image: url('../images/nav.gif');
   margin: 0 0 10px 0;
 }
 
 #nav_content {
-  width: 950px;
-  height: 50px;
+  width: 970px;
+  height: 40px;
+  background-color: #404040;
   margin: 0 auto 0 auto;
+	-moz-border-radius: 10px 10px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #404040;
+	-moz-box-shador: 1px 1px 5px #404040;
+	box-shadow: 1px 1px 5px #404040;
 }
 
 #nav_list {
   padding: 0;
-  margin-top: 10px;
+  margin: 5px 0 0 5px;
 	float: left;
 	list-style: none;
 }
@@ -138,7 +146,7 @@ div.field, div.actions { margin-bottom: 10px; }
 }
 
 #login {
-  padding: 15px 10px 0 0;
+  padding: 11px 10px 0 0;
   margin: 0;
   float: right;
   text-align: right; 
