Fixed fancybox scrolling

--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -10,7 +10,8 @@
     $('a[rel*=facebox]').fancybox({
 	    'transitionIn'	:	'elastic',
 		  'transitionOut'	:	'elastic',
-		  'showNavArrows': false 
+		  'showNavArrows': false,
+		  'scrolling': 'no'
     });
     $('tr td:first-child').truncate({max_length: 75});
   <% end %>
