--- a/app/views/postings/update.js.erb
+++ b/app/views/postings/update.js.erb
@@ -9,7 +9,8 @@
   $('a[rel*=facebox]').fancybox({
 	  'transitionIn'	:	'elastic',
 		'transitionOut'	:	'elastic',
-		'showNavArrows': false 
+		'showNavArrows': false,
+		'scrolling': 'no'
   });
   $('tr td:first-child').truncate({max_length: 75});
 <% end %>
