Added splash to landing page

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -26,9 +26,8 @@
       <div id="login"><%= login_link %></div>
     </div>
   </div>
-  <div id="page">
-    <div id="content">
-      <p id="notice"><%= notice %></p>
+  <div id="landing">
+    <div id="splash">
       <%= yield %>
     </div>  
   </div>
