--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -179,7 +179,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #splash {
   font-weight: bold;
-  background-image: url(../images/splash.png);
+  background-image: url(http://photos.shareon.it/splash.png);
   color: white;
   margin: 0 auto;
   width: 680px;
