--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -15,7 +15,7 @@
 <body>
   <div id="header">
     <div id="header_content">
-      <%= link_to image_tag('beta_logo.gif'), root_path %>
+      <%= link_to image_tag('shareonit_logo.gif'), root_path %>
     </div>
   </div>
   <div id="nav">
