--- a/app/views/notifier/offer.html.erb
+++ b/app/views/notifier/offer.html.erb
@@ -1,7 +1,7 @@
 Hi <%= @to_user.first_name %>,<br/><br/>
 
 <% if @posting.have %>
-  <%= @from_user.full_name %> would like to borrow <%= @posting.description %> from you.
+  <%= @from_user.full_name %> would like to <%= @posting.for_sale ? 'buy' : 'borrow' %> <%= @posting.description %> from you.
 <% else %>
   <%= @to_user.full_name %> saw you needed <%= @posting.description %> and would like to help you out.
 <% end %>
@@ -11,7 +11,7 @@ Hi <%= @to_user.first_name %>,<br/><br/>
   <p><%= @message %></p>
 <% end %>
 
-Reply to this message to contact them and set up the trade!<br/><br/>
+Reply to this message to contact them.<br/><br/>
 
 Sincerely,<br/>
 The Shareon.it Team
