Fixed formatting of tables. Added user counter to communities. Added destroy callback to memberships to delete all associated postings.

--- a/app/views/communities/_list.html.erb
+++ b/app/views/communities/_list.html.erb
@@ -2,7 +2,7 @@
   <tr class="ui-widget-header">
     <th>Name</th>
     <th>Zip Code</th>
-    <th>Status</th>
+    <th>Users</th>
     <th></th>
   </tr>
 
