--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -4,9 +4,10 @@
 
 <%= form_tag community_invitations_path(@community), :method => :post, :remote => true do %>
   <div class="field">
-    <%= label_tag :emails, 'User emails' %> (comma separated)<br/>
+    User emails (comma separated)<br/>
     <%= text_area_tag 'emails' %>
   </div>
+  
   <div class="actions">
     <%= submit_tag 'Send Invitations', :class => 'button' %>
   </div>
