--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -4,25 +4,30 @@
   <%= f.error_messages %>
   <% if action_name =~ /new|create/ %>
     <div class="field">
-      <%= f.label :name %><br/>
+      <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
+      
     <div class="field">
-      <%= f.label :zip_code %><br/>
+      <%= f.label :zip_code %>
       <%= f.text_field :zip_code %>
     </div>
   <% end %>
+  
   <div class="field">
-    <%= f.label :description %><br/>
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+  
   <% if action_name =~ /new|create/ %>
     <div class="field">
-      <%= f.label :emails, 'User emails' %> (comma separated)<br/>
+      User emails (comma separated)<br/>
       <%= text_area_tag 'emails' %>
     </div>
+    
     <%= f.hidden_field :user_id, :value => current_user.id %>
   <% end %>
+  
   <div class="actions">
     <%= f.submit action_name == 'new' ? 'Create' : 'Update', :class => 'button' %>
   </div>
