--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -12,11 +12,18 @@
   <%= link_to 'Edit Posting', edit_posting_path(@posting), :rel => 'facebox', :class => 'button' %>
 <% else %>
   <%= form_tag email_posting_path, :remote => true do %>
-    <%= text_area_tag 'message', nil, :placeholder => 'Enter optional message to user...' %>
-    <br/>
+    <div class="field">
+      <%= text_area_tag 'message', nil, :placeholder => 'Enter optional message to user...' %>
+    </div>
+    
     <% unless @posting.have %>
-      <%= check_box_tag 'add_to_inventory', true, true %>Add item to active communities?<br/>
+      <div class="field">
+        <%= check_box_tag 'add_to_inventory', true, true %>Add item to active communities?
+      </div>
     <% end %>
-    <%= submit_tag @posting.have ? 'Send Request' : 'Send Offer', :class => 'button' %>
+    
+    <div class="action">
+      <%= submit_tag @posting.have ? 'Send Request' : 'Send Offer', :class => 'button' %>
+    </div>
   <% end %>
 <% end %>
