Beautified some code

--- a/app/views/communities/_list.html.erb
+++ b/app/views/communities/_list.html.erb
@@ -7,6 +7,6 @@
   </tr>
 
 <% communities.each do |community| %>
-  <%= raw(community_table_row(community)) %>
+  <%= community_table_row(community) %>
 <% end %>
 </table>
