--- a/app/views/memberships/_list.html.erb
+++ b/app/views/memberships/_list.html.erb
@@ -6,7 +6,7 @@
   </tr>
 
 <% memberships.each do |membership| %>
-  <%= raw(membership_table_row(membership)) %>
+  <%= membership_table_row(membership) %>
 <% end %>
 </table>
 
