--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -26,4 +26,4 @@
   </div>
 </div>
 
-<%= render :partial => 'postings/list', :object => @postings, :as => :postings %>
+<%= render 'postings/list', :object => @postings, :as => :postings %>
