--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -12,7 +12,7 @@
     </tr>
 
   <% @invitations.each do |invitation| %>
-    <%= raw(invitation_table_row(invitation)) %>
+    <%= invitation_table_row(invitation) %>
   <% end %>
   </table>
   <br/>
@@ -21,7 +21,7 @@
 
 <div id="my_communities">
   <h2>My Communites</h2>
-  <%= render :partial => 'communities/list', :object => @my_communities, :as => :communities %>
+  <%= render 'communities/list', :object => @my_communities, :as => :communities %>
 </div>
 
 <br/>
@@ -36,6 +36,6 @@
   </div>
 
   <%= will_paginate @all_communities %>
-  <%= render :partial => 'communities/list', :object => @all_communities, :as => :communities %>
+  <%= render 'communities/list', :object => @all_communities, :as => :communities %>
   <%= will_paginate @all_communities %>
 </div>
