--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -21,7 +21,7 @@
   <div id="nav">
     <div id="nav_content">
       <ul id="nav_list">
-        <%= raw(navigation_content) %>
+        <%= navigation_content %>
       </ul>
       <div id="login"><%= login_link %></div>
     </div>
