--- a/app/views/postings/edit.html.erb
+++ b/app/views/postings/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit Posting</h1>
 
-<div id="edit_posting_form"><%= render :partial => 'postings/form' %></div>
+<div id="edit_posting_form"><%= render 'postings/form' %></div>
