--- a/app/views/postings/new.html.erb
+++ b/app/views/postings/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Posting</h1>
 
-<div id="new_posting_form"><%= render :partial => 'postings/form' %></div>
+<div id="new_posting_form"><%= render 'postings/form' %></div>
