--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,6 +1,5 @@
-$('#loading').hide();
 <% if @user.errors.any? %>
-  $('#new_user_form').html('<%= escape_javascript(render :partial => 'users/form') %>');
+  $('#new_user_form').html('<%= escape_javascript(render 'users/form') %>');
   resize_fancybox();
 <% else %>
   $.fancybox.close();
