--- a/app/views/memberships/create.js.erb
+++ b/app/views/memberships/create.js.erb
@@ -1,4 +1,4 @@
 $('#notice').html('Membership to <%= @membership.community.name %> requested. You will be notified via email when it is accepted.');
 $('#community_<%= @membership.community_id %>').remove();
-$('#my_communities tr:first').after('<%= escape_javascript(community_table_row @membership.community) %>');
+$('#my_communities tr:first').after('<%= j community_table_row(@membership.community) %>');
 $('.buttonset').buttonset();
