--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -26,4 +26,4 @@
   </div>
 </div>
 
-<%= render 'postings/list', :object => @postings, :as => :postings %>
+<%= render :partial => 'list', :object => @postings, :as => :postings %>
