--- a/app/views/postings/my_stuff.html.erb
+++ b/app/views/postings/my_stuff.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'I Have', new_posting_path(:have => 1), :rel => 'facebox', :class => 'button' %>
 <div id="have">
   <%= will_paginate @inventory, :param_name => 'inv_page' %>
-  <%= render 'postings/list', :object => @inventory, :as => :postings %>
+  <%= render :partial => 'list', :object => @inventory, :as => :postings %>
   <%= will_paginate @inventory, :param_name => 'inv_page' %>
 </div>
 
@@ -10,6 +10,6 @@
 <%= link_to 'I Want', new_posting_path(:have => 0), :rel => 'facebox', :class => 'button' %>
 <div id="want">
   <%= will_paginate @requests, :param_name => 'req_page' %>
-  <%= render 'postings/list', :object => @requests, :as => :postings %>
+  <%= render :partial => 'list', :object => @requests, :as => :postings %>
   <%= will_paginate @requests, :param_name => 'req_page' %>
 </div>
