--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New community</h1>
 
-<div id="new_community_form"><%= render 'communities/form' %></div>
+<div id="new_community_form"><%= render :partial => 'form' %></div>
