--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Register</h1>
 
-<div id="new_user_form"><%= render 'users/form' %></div>
+<div id="new_user_form"><%= render :partial => 'form' %></div>
