--- a/app/views/invitations/destroy.js.erb
+++ b/app/views/invitations/destroy.js.erb
@@ -1,4 +1,4 @@
-$('#notice').html('Invitation to <%= j @invitation.community.name %> rejected.');
+$('#notice').html('Invitation to <%= escape_javascript @invitation.community.name %> rejected.');
 $('#invitation_<%= @invitation.id %>').remove();
 if ($('#invitation_list tr').length == 1) {
   $('#invitations').remove();
