--- a/app/views/communities/create.js.erb
+++ b/app/views/communities/create.js.erb
@@ -1,9 +1,9 @@
 <% if @community.errors.any? %>
-  $('#new_community_form').html('<%= j render('communities/form') %>');
+  $('#new_community_form').html('<%= escape_javascript render('communities/form') %>');
   resize_fancybox();
 <% else %>
   $.fancybox.close();
   $('#notice').html('Community added.');
-  $('#my_communities tr:first').after('<%= j community_table_row(@community) %>');
+  $('.list_element:first').before('<%= escape_javascript community_div(@community) %>');
   $('.buttonset').buttonset();
 <% end %>
